--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
           </div>
             <div class="col-sm-12 mx-auto text-center">
               <a href="#resume" class="btn btn-dark btn-lg js-scroll-trigger">Resume</a>
-              <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">About Me</a>
+              <a href="#experience" class="btn btn-dark btn-lg js-scroll-trigger">Experience</a>
               <a href="#projects" class="btn btn-dark btn-lg js-scroll-trigger">Projects</a>
+              <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">About Me</a>
 
           </div>
         </div>
@@ -136,78 +137,89 @@
       <!-- /.container -->
     </section>
 
-    <!-- About -->
-    <section id="about" class="about">
-      <div class="container text-center">
-        <h1>About Me</h1>
-        <div class="row align-items-center">
-        <div class="col-sm-4">
-        <a href="http://instagram.com/taiseiklasen">
-          <img class="img-about img-responsive" src="img/tempura.jpg">
-        </a>
-        </div>
-        <p class="lead">こんにちは</p>
-        <h4>I was born in Japan and lived there until third grade. Because I went to
-        Japanese school every Saturday until high school, I still can speak Japanese at
-        a native level. Keeping in touch with Japanese culture is one of my hobbies.</h4>
-        </div>
-        <p class="lead">I like to cook, play music, and go running</p>
-        <h4>In the free time that I have, I like to cook food. I often cook food for
-        my friends, per their request. In high school I played the saxophone, guitar, bass,
-        and sang in the show choir and musical. Music theory is really interesting and fun.
-        When I go running, I like to try and pushed myself. Often I run 10k's in my off time.</h4>
-      </div>
-      <!-- /.container -->
+    <!-- Callout -->
+    <section id="experience" class="experience">
+      <div class="jumbotron text-center">
+        <div class="container">
+          <div class="row">
+        <h2>Experience</h2>
+            </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="https://classes.cs.uoregon.edu/index.php?course=cis212&year=17">
+                <img src="img/uo-campus.jpg" alt="Oregon" style="width:100%">
+                <div class="caption">
+                  <h3><strong>Grader</strong> at University of Oregon</h3>
+                  <p>Grading CS 212.<br>
+                  Grading a java-based class using bash scripts, etc.<br>
+                  Commenting on each assignment to give students tips on becoming a better computer scientist.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="www.instagram.com/taisei.klasen">
+                <img src="img/uo-campus-2.jpg" alt="Oregon" style="width:100%">
+                <div class="caption">
+                  <h3><strong>Research</strong> at University of Oregon</h3>
+                  <p>Wrote the Oregon Python ADT package.<br>
+                  Implemented Data types such as an ordered set with Python.<br>
+                  Intended for use in classes at the University of Oregon.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="www.instagram.com/sunglasshut">
+                <img src="img/sunglasshut.jpg" alt="Sunglass" style="width:100%">
+                <div class="caption">
+                  <h3><strong>Sales</strong> at Sunglass Hut</h3>
+                  <p>Worked as a sales consultant at Sunglass Hut.<br>
+                  Greeted customers as they arrive and provided info.<br>
+                  Unofficially would step in to entry level management posission as needed.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+      </div> <!--jumbotron -->
+        </div> <!-- container -->
     </section>
 
 
 
-    <!-- Callout -->
-    <aside class="callout">
-      <div class="text-vertical-center">
-        <h1>Vertically Centered Text</h1>
-      </div>
-    </aside>
 
     <!-- projects -->
     <section id="projects" class="projects">
       <div class="container">
         <div class="row">
-          <div class="col-lg-10 mx-auto text-center">
-            <h2>Our Work</h2>
+          <div class="col-lg-12 mx-auto text-center">
+            <h1>Projects</h1>
             <hr class="small">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-1.jpg">
-                  </a>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <h3>Supreme Bot</h3>
+                    <p>Created a web scraper that buys items from supreme automatically. This
+                    bot purchases items quicker than a human can.</p>
+                  </div>
+                  <div class="col-sm-4">
+                    <h3>Anagram Web App</h3>
+                    <p>Web application game that checks if a word is in the word bank. The
+                    selected word will come from the letters of jumbled words. Done as a
+                    part of the Software Engineering class. <br><a href="https://github.com/taiseiak/proj3-anagrams">Link to Github Here.</a> </p>
+                  </div>
+                  <div class="col-sm-4">
+                    <h3>AuxParty</h3>
+                    <p>iOS application that creates a virtual split aux cord. A host
+                    phone takes requests from other phones in its party and plays music. Powered
+                    by a Django backend on AWS. <br><a href="https://github.com/taiseiak/AuxPartyiOS">Link to Github Here.</a> </p>
+                  </div>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-2.jpg">
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-3.jpg">
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-4.jpg">
-                  </a>
-                </div>
-              </div>
-            </div>
             <!-- /.row (nested) -->
-            <a href="#" class="btn btn-dark">View More Items</a>
           </div>
           <!-- /.col-lg-10 -->
         </div>
@@ -216,14 +228,64 @@
       <!-- /.container -->
     </section>
 
-    <!-- Call to Action -->
-    <aside class="call-to-action bg-primary text-white">
-      <div class="container text-center">
-        <h3>The buttons below are impossible to resist.</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+        <!-- About -->
+    <section id="about" class="about text-center">
+      <div class="row">
+      <h1>About Me</h1>
       </div>
-    </aside>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item carousel-img active">
+      <img src="img/mtfuji.jpg" alt="Japan">
+      <div class="carousel-caption">
+        <h3>こんにちは</h3>
+        <p>I was born in Japan and lived there until third grade. Because I went to
+            Japanese school every Saturday until high school, I still can speak Japanese at
+            a native level. Keeping in touch with Japanese culture is one of my hobbies.</p>
+      </div>
+    </div>
+
+    <div class="item carousel-img">
+      <img src="img/tendon.jpg" alt="Food">
+      <div class="carousel-caption">
+        <h3>Cooking</h3>
+        <p>I love to cook. Almost every meal I eat is something that I made.
+        I try to challenge myself by making different kinds of food and making
+        what I already know how to make better.</p>
+      </div>
+    </div>
+
+    <div class="item carousel-img">
+      <img src="img/run.jpg" alt="New York">
+      <div class="carousel-caption">
+        <h3>Running</h3>
+        <p>When I have free time, I like to run. I run 10k's to try and make my
+        long distance running better. The feeling when your legs start moving for you
+        is one of the best in the world.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+      <!-- /.container -->
+    </section>
 
     <!-- Footer -->
     <footer>
