fixed 15px on the right

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="text-vertical-center">
         <h1>Taisei Klasen</h1>
         <br>
+        <div class="container">
           <div class="row">
           <div class="col-lg-12 mx-auto text-center">
             <ul class="list-unstyled">
@@ -59,13 +60,14 @@
           </div>
             <div class="col-sm-12 mx-auto text-center">
               <a href="#resume" class="btn btn-dark btn-lg js-scroll-trigger">Resume</a>
-              <a href="#experience" class="btn btn-dark btn-lg js-scroll-trigger">Experience</a>
               <a href="#projects" class="btn btn-dark btn-lg js-scroll-trigger">Projects</a>
               <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">About Me</a>
 
           </div>
         </div>
+        </div>
       </div>
+
     </header>
 
     <!-- Resume -->
@@ -230,6 +232,7 @@
 
         <!-- About -->
     <section id="about" class="about text-center">
+      <div class="container">
       <div class="row">
       <h1>About Me</h1>
       </div>
@@ -285,6 +288,7 @@
   </a>
 </div>
       <!-- /.container -->
+        </div>
     </section>
 
     <!-- Footer -->
