--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
               </li>
               <li>
                 <i class="fa fa-linkedin fa-fw"></i>
-                <a href="www.linkedin.com/in/taisei" class="top-link">linkedin.com/in/taisei</a>
+                <a href="https://linkedin.com/in/taisei" class="top-link">linkedin.com/in/taisei</a>
               </li>
               <li>
                 <i class="fa fa-github fa-fw"></i>
-                <a href="www.github.com/taiseiak" class="top-link">github.com/taiseiak</a>
+                <a href="https://github.com/taiseiak" class="top-link">github.com/taiseiak</a>
               </li>
             </ul>
           </div>
@@ -162,7 +162,7 @@
 
           <div class="col-md-4">
             <div class="thumbnail">
-              <a href="www.instagram.com/taisei.klasen">
+              <a href="https://instagram.com/taisei.klasen">
                 <img src="img/uo-campus-2.jpg" alt="Oregon" style="width:100%">
                 <div class="caption">
                   <h3><strong>Research</strong> at University of Oregon</h3>
@@ -176,7 +176,7 @@
 
           <div class="col-md-4">
             <div class="thumbnail">
-              <a href="www.instagram.com/sunglasshut">
+              <a href="https://instagram.com/sunglasshut">
                 <img src="img/sunglasshut.jpg" alt="Sunglass" style="width:100%">
                 <div class="caption">
                   <h3><strong>Sales</strong> at Sunglass Hut</h3>
