--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
       <img src="img/run.jpg" alt="New York">
       <div class="carousel-caption">
         <h3>Running</h3>
-        <p>When I have free time, I like to run. I run 10k's to try and make my
-        long distance running better. The feeling when your legs start moving for you
+        <p>When I have free time, I like to run. I run 10ks to improve my speed as well as my overall health.
+          The feeling when your legs start moving for you
         is one of the best in the world.</p>
       </div>
     </div>
