--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
       <img src="img/tendon.jpg" alt="Food">
       <div class="carousel-caption">
         <h3>Cooking</h3>
-        <p>I love to cook. Almost every meal I eat is something that I made.
-        I try to challenge myself by making different kinds of food and making
-        what I already know how to make better.</p>
+        <p>I try to challenge myself by attempting a variety of world cuisine
+          and work to hone my personal recipes. My favorite genre of food to cook is
+          Japanese food.”</p>
       </div>
     </div>
 
