--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
       <img src="img/mtfuji.jpg" alt="Japan">
       <div class="carousel-caption">
         <h3>こんにちは</h3>
-        <p>I was born in Japan and lived there until third grade. Because I went to
-            Japanese school every Saturday until high school, I still can speak Japanese at
-            a native level. Keeping in touch with Japanese culture is one of my hobbies.</p>
+        <p>I was born and raised in Japan until I moved to America in third grade.
+          Through my continued education at Japanese school, I am still fluent in my native language.
+          Keeping in touch with Japanese culture is one of my hobbies</p>
       </div>
     </div>
 
