--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           </div>
             <div class="col-sm-12 mx-auto text-center">
               <a href="#resume" class="btn btn-dark btn-lg js-scroll-trigger">Resume</a>
+              <a href="#experience" class="btn btn-dark btn-lg js-scroll-trigger">Experience</a>
               <a href="#projects" class="btn btn-dark btn-lg js-scroll-trigger">Projects</a>
               <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">About Me</a>
 
